# appendrc

./: .bfignore  .gitignore  Cargo.toml  README.md  appendrc_cli  bash_completion  brew  init_appendrc  pip
sourcables/: 000_appendrc_paths  brew  colima_backend_dp  go  jj  pyenv
src/: main.rs
