[package]
name = "appendrc"
version = "0.1.3"
edition = "2021"
description = "Manage and time shell sourcable files"
license = "MIT"
repository = "https://github.com/gndps/appendrc"
homepage = "https://github.com/gndps/appendrc"

[[bin]]
name = "appendrc"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"
